run some results for the full comparison

--- a/topic_modeling/tm_defined_classes/test_01.ipynb
+++ b/topic_modeling/tm_defined_classes/test_01.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/yorest/miniconda3/envs/nlp/lib/python3.9/site-packages/umap/distances.py:1063: NumbaDeprecationWarning: The 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\n",
+      "  @numba.jit()\n",
+      "/Users/yorest/miniconda3/envs/nlp/lib/python3.9/site-packages/umap/distances.py:1071: NumbaDeprecationWarning: The 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\n",
+      "  @numba.jit()\n",
+      "/Users/yorest/miniconda3/envs/nlp/lib/python3.9/site-packages/umap/distances.py:1086: NumbaDeprecationWarning: The 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\n",
+      "  @numba.jit()\n",
+      "/Users/yorest/miniconda3/envs/nlp/lib/python3.9/site-packages/umap/umap_.py:660: NumbaDeprecationWarning: The 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\n",
+      "  @numba.jit()\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.decomposition import LatentDirichletAllocation, PCA\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
@@ -36,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +597,8 @@
     "        pd.DataFrame: The results dataframe\n",
     "    \"\"\"\n",
     "    if load:\n",
-    "        results_df = pd.read_csv(f'./results/{dataset_name.lower()}.csv')\n",
+    "        results_df = pd.read_csv(f'./results/{dataset_name.lower()}.csv', index_col=0)\n",
+    "        return results_df\n",
     "\n",
     "    f1_scores_by_datasets = get_f1_scores_by_datasets(models, [dataset_name])\n",
     "\n",
@@ -603,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,31 +642,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb Cell 23\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb#X31sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m twenty_news_group_result_df \u001b[39m=\u001b[39m get_and_save_result_for_dataset(\u001b[39m'\u001b[39;49m\u001b[39m20NewsGroup\u001b[39;49m\u001b[39m'\u001b[39;49m, models, load\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n",
-      "\u001b[1;32m/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb Cell 23\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb#X31sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mif\u001b[39;00m load:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb#X31sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     results_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m./results/\u001b[39m\u001b[39m{\u001b[39;00mdataset_name\u001b[39m.\u001b[39mlower()\u001b[39m}\u001b[39;00m\u001b[39m.csv\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb#X31sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m f1_scores_by_datasets \u001b[39m=\u001b[39m get_f1_scores_by_datasets(models, [dataset_name])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb#X31sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m complete_f1_scores_by_datasets \u001b[39m=\u001b[39m {}\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb#X31sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39mfor\u001b[39;00m dataset_name \u001b[39min\u001b[39;00m f1_scores_by_datasets:\n",
-      "\u001b[1;32m/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb Cell 23\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb#X31sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     \u001b[39mfor\u001b[39;00m model_name \u001b[39min\u001b[39;00m models:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb#X31sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m         model \u001b[39m=\u001b[39m models[model_name](dataset_name)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb#X31sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m         f1_scores_by_datasets[dataset_name][model_name] \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39;49mget_f1_scores()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb#X31sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39mreturn\u001b[39;00m f1_scores_by_datasets\n",
-      "\u001b[1;32m/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb Cell 23\u001b[0m line \u001b[0;36m4\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb#X31sZmlsZQ%3D%3D?line=40'>41</a>\u001b[0m y_true \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlabels\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb#X31sZmlsZQ%3D%3D?line=42'>43</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrandom_n_iter):\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb#X31sZmlsZQ%3D%3D?line=43'>44</a>\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtrain()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb#X31sZmlsZQ%3D%3D?line=45'>46</a>\u001b[0m     y_pred \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpredict()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb#X31sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m     assignment \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39massign_topics(y_pred)\n",
-      "\u001b[1;32m/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb Cell 23\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb#X31sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m eta \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mdivide(eta, eta\u001b[39m.\u001b[39msum(axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)) \u001b[39m# normalize so that the probabilities sum to 1 over all topics\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb#X31sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m \u001b[39mwith\u001b[39;00m (np\u001b[39m.\u001b[39merrstate(divide\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mignore\u001b[39m\u001b[39m'\u001b[39m)):  \u001b[39m# ignore divide-by-zero warnings\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb#X31sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmodel \u001b[39m=\u001b[39m gensim\u001b[39m.\u001b[39;49mmodels\u001b[39m.\u001b[39;49mldamodel\u001b[39m.\u001b[39;49mLdaModel(\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb#X31sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m         corpus\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcorpus, id2word\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdictionary, num_topics\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mnum_topics,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb#X31sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m         random_state\u001b[39m=\u001b[39;49m\u001b[39m42\u001b[39;49m, chunksize\u001b[39m=\u001b[39;49m\u001b[39m100\u001b[39;49m, eta\u001b[39m=\u001b[39;49meta,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb#X31sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m         eval_every\u001b[39m=\u001b[39;49m\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, update_every\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/yorest/Documents/code/Sinch-TMC/topic_modeling/tm_defined_classes/test_01.ipynb#X31sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m         passes\u001b[39m=\u001b[39;49m\u001b[39m150\u001b[39;49m, alpha\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mauto\u001b[39;49m\u001b[39m'\u001b[39;49m, per_word_topics\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
-      "File \u001b[0;32m~/miniconda3/envs/nlp/lib/python3.9/site-packages/gensim/models/ldamodel.py:520\u001b[0m, in \u001b[0;36mLdaModel.__init__\u001b[0;34m(self, corpus, num_topics, id2word, distributed, chunksize, passes, update_every, alpha, eta, decay, offset, eval_every, iterations, gamma_threshold, minimum_probability, random_state, ns_conf, minimum_phi_value, per_word_topics, callbacks, dtype)\u001b[0m\n\u001b[1;32m    518\u001b[0m use_numpy \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdispatcher \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    519\u001b[0m start \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime()\n\u001b[0;32m--> 520\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mupdate(corpus, chunks_as_numpy\u001b[39m=\u001b[39;49muse_numpy)\n\u001b[1;32m    521\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39madd_lifecycle_event(\n\u001b[1;32m    522\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mcreated\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    523\u001b[0m     msg\u001b[39m=\u001b[39m\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mtrained \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m in \u001b[39m\u001b[39m{\u001b[39;00mtime\u001b[39m.\u001b[39mtime()\u001b[39m \u001b[39m\u001b[39m-\u001b[39m\u001b[39m \u001b[39mstart\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39ms\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    524\u001b[0m )\n",
-      "File \u001b[0;32m~/miniconda3/envs/nlp/lib/python3.9/site-packages/gensim/models/ldamodel.py:1005\u001b[0m, in \u001b[0;36mLdaModel.update\u001b[0;34m(self, corpus, chunksize, decay, offset, passes, update_every, eval_every, iterations, gamma_threshold, chunks_as_numpy)\u001b[0m\n\u001b[1;32m   1000\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   1001\u001b[0m     logger\u001b[39m.\u001b[39minfo(\n\u001b[1;32m   1002\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mPROGRESS: pass \u001b[39m\u001b[39m%i\u001b[39;00m\u001b[39m, at document #\u001b[39m\u001b[39m%i\u001b[39;00m\u001b[39m/\u001b[39m\u001b[39m%i\u001b[39;00m\u001b[39m\"\u001b[39m,\n\u001b[1;32m   1003\u001b[0m         pass_, chunk_no \u001b[39m*\u001b[39m chunksize \u001b[39m+\u001b[39m \u001b[39mlen\u001b[39m(chunk), lencorpus\n\u001b[1;32m   1004\u001b[0m     )\n\u001b[0;32m-> 1005\u001b[0m     gammat \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdo_estep(chunk, other)\n\u001b[1;32m   1007\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39moptimize_alpha:\n\u001b[1;32m   1008\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mupdate_alpha(gammat, rho())\n",
-      "File \u001b[0;32m~/miniconda3/envs/nlp/lib/python3.9/site-packages/gensim/models/ldamodel.py:767\u001b[0m, in \u001b[0;36mLdaModel.do_estep\u001b[0;34m(self, chunk, state)\u001b[0m\n\u001b[1;32m    765\u001b[0m \u001b[39mif\u001b[39;00m state \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    766\u001b[0m     state \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstate\n\u001b[0;32m--> 767\u001b[0m gamma, sstats \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49minference(chunk, collect_sstats\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n\u001b[1;32m    768\u001b[0m state\u001b[39m.\u001b[39msstats \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m sstats\n\u001b[1;32m    769\u001b[0m state\u001b[39m.\u001b[39mnumdocs \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m gamma\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]  \u001b[39m# avoids calling len(chunk) on a generator\u001b[39;00m\n",
-      "File \u001b[0;32m~/miniconda3/envs/nlp/lib/python3.9/site-packages/gensim/models/ldamodel.py:718\u001b[0m, in \u001b[0;36mLdaModel.inference\u001b[0;34m(self, chunk, collect_sstats)\u001b[0m\n\u001b[1;32m    714\u001b[0m lastgamma \u001b[39m=\u001b[39m gammad\n\u001b[1;32m    715\u001b[0m \u001b[39m# We represent phi implicitly to save memory and time.\u001b[39;00m\n\u001b[1;32m    716\u001b[0m \u001b[39m# Substituting the value of the optimal phi back into\u001b[39;00m\n\u001b[1;32m    717\u001b[0m \u001b[39m# the update for gamma gives this update. Cf. Lee&Seung 2001.\u001b[39;00m\n\u001b[0;32m--> 718\u001b[0m gammad \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39malpha \u001b[39m+\u001b[39m expElogthetad \u001b[39m*\u001b[39m np\u001b[39m.\u001b[39mdot(cts \u001b[39m/\u001b[39;49m phinorm, expElogbetad\u001b[39m.\u001b[39mT)\n\u001b[1;32m    719\u001b[0m Elogthetad \u001b[39m=\u001b[39m dirichlet_expectation(gammad)\n\u001b[1;32m    720\u001b[0m expElogthetad \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mexp(Elogthetad)\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "twenty_news_group_result_df = get_and_save_result_for_dataset('20NewsGroup', models, load=False)"
+    "twenty_news_group_result_df = get_and_save_result_for_dataset('20NewsGroup', models, load=True)"
    ]
   },
   {
