add other results

--- a/topic_modeling/tm_comparison/test_01.ipynb
+++ b/topic_modeling/tm_comparison/test_01.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/yorest/miniconda3/envs/nlp/lib/python3.9/site-packages/umap/distances.py:1063: NumbaDeprecationWarning: The 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\n",
+      "  @numba.jit()\n",
+      "/Users/yorest/miniconda3/envs/nlp/lib/python3.9/site-packages/umap/distances.py:1071: NumbaDeprecationWarning: The 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\n",
+      "  @numba.jit()\n",
+      "/Users/yorest/miniconda3/envs/nlp/lib/python3.9/site-packages/umap/distances.py:1086: NumbaDeprecationWarning: The 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\n",
+      "  @numba.jit()\n",
+      "/Users/yorest/miniconda3/envs/nlp/lib/python3.9/site-packages/umap/umap_.py:660: NumbaDeprecationWarning: The 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\n",
+      "  @numba.jit()\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append(\"..\")\n",
@@ -29,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +470,7 @@
        "3          0.026225         -2.232617   0.883333                0.922348  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,11 +490,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{llrrrrrr}roup and GuidedBERTopicModel\n",
+      "\\toprule\n",
+      "dataset & model & coherence_c_v & coherence_c_uci & coherence_c_npmi & coherence_u_mass & diversity & supervised_correlation \\\\\n",
+      "\\midrule\n",
+      "20NewsGroup & LDAModel & 0.603940 & 0.673476 & 0.096662 & -1.883472 & 0.761000 & 0.401317 \\\\\n",
+      "20NewsGroup & BERTopicModel & 0.472277 & 0.125097 & 0.053755 & -2.306378 & 0.803810 & 0.268840 \\\\\n",
+      "20NewsGroup & GuidedLDAModel & 0.462860 & -0.205873 & 0.025873 & -2.436411 & 0.985000 & 0.361511 \\\\\n",
+      "20NewsGroup & GuidedBERTopicModel & 0.528895 & 0.203075 & 0.071613 & -2.263779 & 0.814286 & 0.318357 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dataset</th>\n",
+       "      <th>model</th>\n",
+       "      <th>coherence_c_v</th>\n",
+       "      <th>coherence_c_uci</th>\n",
+       "      <th>coherence_c_npmi</th>\n",
+       "      <th>coherence_u_mass</th>\n",
+       "      <th>diversity</th>\n",
+       "      <th>supervised_correlation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20NewsGroup</td>\n",
+       "      <td>LDAModel</td>\n",
+       "      <td>0.603940</td>\n",
+       "      <td>0.673476</td>\n",
+       "      <td>0.096662</td>\n",
+       "      <td>-1.883472</td>\n",
+       "      <td>0.761000</td>\n",
+       "      <td>0.401317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20NewsGroup</td>\n",
+       "      <td>BERTopicModel</td>\n",
+       "      <td>0.472277</td>\n",
+       "      <td>0.125097</td>\n",
+       "      <td>0.053755</td>\n",
+       "      <td>-2.306378</td>\n",
+       "      <td>0.803810</td>\n",
+       "      <td>0.268840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20NewsGroup</td>\n",
+       "      <td>GuidedLDAModel</td>\n",
+       "      <td>0.462860</td>\n",
+       "      <td>-0.205873</td>\n",
+       "      <td>0.025873</td>\n",
+       "      <td>-2.436411</td>\n",
+       "      <td>0.985000</td>\n",
+       "      <td>0.361511</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20NewsGroup</td>\n",
+       "      <td>GuidedBERTopicModel</td>\n",
+       "      <td>0.528895</td>\n",
+       "      <td>0.203075</td>\n",
+       "      <td>0.071613</td>\n",
+       "      <td>-2.263779</td>\n",
+       "      <td>0.814286</td>\n",
+       "      <td>0.318357</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       dataset                model  coherence_c_v  coherence_c_uci  \\\n",
+       "0  20NewsGroup             LDAModel       0.603940         0.673476   \n",
+       "1  20NewsGroup        BERTopicModel       0.472277         0.125097   \n",
+       "2  20NewsGroup       GuidedLDAModel       0.462860        -0.205873   \n",
+       "3  20NewsGroup  GuidedBERTopicModel       0.528895         0.203075   \n",
+       "\n",
+       "   coherence_c_npmi  coherence_u_mass  diversity  supervised_correlation  \n",
+       "0          0.096662         -1.883472   0.761000                0.401317  \n",
+       "1          0.053755         -2.306378   0.803810                0.268840  \n",
+       "2          0.025873         -2.436411   0.985000                0.361511  \n",
+       "3          0.071613         -2.263779   0.814286                0.318357  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "newsgroups_metrics_df = compute_metrics_df(dataset_names=['20NewsGroup'], models=models, n_iterations=5)\n",
+    "newsgroups_metrics_df = compute_metrics_df(dataset_name='20NewsGroup', models=models, n_iterations=5, load_from_file=False)\n",
     "print(newsgroups_metrics_df.to_latex(index=False))\n",
     "newsgroups_metrics_df"
    ]
@@ -497,7 +628,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dblp_metrics_df = compute_metrics_df(dataset_names=['DBLP'], models=models, n_iterations=5)\n",
+    "dblp_metrics_df = compute_metrics_df(dataset_name='DBLP', models=models, n_iterations=5, load_from_file=False)\n",
     "print(dblp_metrics_df.to_latex(index=False))\n",
     "dblp_metrics_df"
    ]
@@ -515,7 +646,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m10_metrics_df = compute_metrics_df(dataset_names=['M10'], models=models, n_iterations=5)\n",
+    "m10_metrics_df = compute_metrics_df(dataset_name='M10', models=models, n_iterations=5, load_from_file=False)\n",
     "print(m10_metrics_df.to_latex(index=False))\n",
     "m10_metrics_df"
    ]
